--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="js/script.js" defer></script>
 </head>
 <body>
-    <div id="header">
+    <header id="header">
         <div class="container">
             <div class="bg">
                 <div class="title1 title">
@@ -32,6 +32,85 @@
                 <div class="about-btn">AB<span class="italic">O</span>UT</div>
             </div>
         </div>
-    </div>
+    </header>
+    <main id="main">
+        <div class="scroll"></div>
+        <div class="container">
+            <section id="project" class="project1">
+                <div class="pj-info">
+                    <div class="name">&#40;01&#41;&nbsp; SM &#38;STORE</div>
+                    <div class="date">2022.01</div>
+                    <div class="lan">HTML&#47; CSS&#47; JQuery</div>
+                </div>
+                <div class="pj-main">
+                    <div class="pj-planet">
+                        <div class="pj-link">
+                            <a href="#">
+                                <img src="" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="pj-title">
+                        <div class="title">
+                            <span class="num">&#40;01&#41;</span>
+                            SM &#38;STORE
+                        </div>
+                        <div class="sub">
+                            HTML&#47; CSS&#47; JQuery
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section id="project" class="project2">
+                <div class="pj-info">
+                    <div class="name">&#40;02&#41;&nbsp; 특허청</div>
+                    <div class="date">2022.02</div>
+                    <div class="lan">HTML&#47; CSS&#47; JQuery</div>
+                </div>
+                <div class="pj-main">
+                    <div class="pj-planet">
+                        <div class="pj-link">
+                            <a href="#">
+                                <img src="" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="pj-title">
+                        <div class="title">
+                            <span class="num">&#40;02&#41;</span>
+                            특허청
+                        </div>
+                        <div class="sub">
+                            HTML&#47; CSS&#47; JQuery
+                        </div>
+                        <div class="sub">
+                            반응형 (Responsive Web)
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section id="project" class="project3">
+                <div class="pj-info">
+                    <div class="name">&#40;01&#41;&nbsp; SM &#38;STORE</div>
+                    <div class="date">2022.01</div>
+                    <div class="lan">HTML&#47; CSS&#47; JQuery&#47; JS</div>
+                </div>
+                <div class="pj-main">
+                    <div class="pj-planet">
+                        <div class="pj-link"></div>
+                    </div>
+                    <div class="pj-title">
+                        <div class="title">
+                            <span class="num">&#40;01&#41;</span>
+                            SM &#38;STORE
+                        </div>
+                        <div class="sub">
+                            HTML&#47; CSS&#47; JQuery&#47; JS
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </main>
 </body>
 </html>
