--- a/index.html
+++ b/index.html
@@ -7,110 +7,202 @@
     <title>LeeJieun</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+
+    <!-- favicon -->
+    <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#000">
+    <meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#000">
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="js/script.js" defer></script>
 </head>
 <body>
-    <header id="header">
+    <header id="cover">
         <div class="container">
-            <div class="bg">
-                <div class="title1 title">
-                    <h1 class="front">lee jieun</h1>
-                    <h1 class="border">lee jieun</h1>
+            <div class="titles">
+                <div class="title1">
+                    <h1>Front-end</h1>
                 </div>
-                <div class="title2 title">
-                    <h1 class="front">lee jieun</h1>
-                    <h1 class="border">lee jieun</h1>
+                <div class="title2">
+                    <h1>developer</h1>
                 </div>
-                <div class="title3 title">
-                    <h1 class="front">lee jieun</h1>
+                <div class="title3">
                     <h1 class="border">lee jieun</h1>
                 </div>
             </div>
             <div class="header">
-                <div class="project-btn">PR<span class="italic">O</span>JECT</div>
-                <div class="about-btn">AB<span class="italic">O</span>UT</div>
+                <div class="project-btn"><a href="#project">PR<span class="italic">O</span>JECT</a></div>
+                <div class="contact-btn"><a href="#contact">C<span class="italic">O</span>NTACT</a></div>
             </div>
         </div>
     </header>
-    <main id="main">
-        <div class="scroll"></div>
-        <div class="container">
-            <section id="project" class="project1">
-                <div class="pj-info">
-                    <div class="name">&#40;01&#41;&nbsp; SM &#38;STORE</div>
-                    <div class="date">2022.01</div>
-                    <div class="lan">HTML&#47; CSS&#47; JQuery</div>
+    <div id="wrap">
+        <div id="about">
+            <div class="container">
+                <div class="title">
+                    <h2>ab<span class="italic">O</span>ut me</h2>
+                    <h2>ab<span class="italic">O</span>ut me</h2>
                 </div>
-                <div class="pj-main">
-                    <div class="pj-planet">
-                        <div class="pj-link">
-                            <a href="#">
-                                <img src="" alt="">
-                            </a>
-                        </div>
-                    </div>
-                    <div class="pj-title">
-                        <div class="title">
-                            <span class="num">&#40;01&#41;</span>
-                            SM &#38;STORE
-                        </div>
-                        <div class="sub">
-                            HTML&#47; CSS&#47; JQuery
-                        </div>
-                    </div>
+                <div class="info">
+                    <ul class="info-l">
+                        <li>Name<span>이지은</span></li>
+                        <li>Birth<span>1999/02/26</span></li>
+                        <li>Address<span>경기도 수원</span></li>
+                        <li>Address<span>경기도 수원</span></li>
+                    </ul>
+                    <ul class="info-r">
+                        <li>Skill</li>
+                        <li>HTML/ CSS/ JQuery/ JS/ Sass/ React/ Python </li>
+                        <li>Design</li>
+                        <li>Photoshop/ Figma</li>
+                    </ul>
                 </div>
-            </section>
-            <section id="project" class="project2">
-                <div class="pj-info">
-                    <div class="name">&#40;02&#41;&nbsp; 특허청</div>
-                    <div class="date">2022.02</div>
-                    <div class="lan">HTML&#47; CSS&#47; JQuery</div>
-                </div>
-                <div class="pj-main">
-                    <div class="pj-planet">
-                        <div class="pj-link">
-                            <a href="#">
-                                <img src="" alt="">
-                            </a>
-                        </div>
-                    </div>
-                    <div class="pj-title">
-                        <div class="title">
-                            <span class="num">&#40;02&#41;</span>
-                            특허청
-                        </div>
-                        <div class="sub">
-                            HTML&#47; CSS&#47; JQuery
-                        </div>
-                        <div class="sub">
-                            반응형 (Responsive Web)
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <section id="project" class="project3">
-                <div class="pj-info">
-                    <div class="name">&#40;01&#41;&nbsp; SM &#38;STORE</div>
-                    <div class="date">2022.01</div>
-                    <div class="lan">HTML&#47; CSS&#47; JQuery&#47; JS</div>
-                </div>
-                <div class="pj-main">
-                    <div class="pj-planet">
-                        <div class="pj-link"></div>
-                    </div>
-                    <div class="pj-title">
-                        <div class="title">
-                            <span class="num">&#40;01&#41;</span>
-                            SM &#38;STORE
-                        </div>
-                        <div class="sub">
-                            HTML&#47; CSS&#47; JQuery&#47; JS
-                        </div>
-                    </div>
-                </div>
-            </section>
+            </div>
         </div>
-    </main>
+        <main id="main">
+            <div class="scroll"></div>
+            <div class="container">
+                <section id="project" class="project1">
+                    <div class="pj-info">
+                        <div class="name">&#40;01&#41;&nbsp; SM &#38;STORE</div>
+                        <div class="date">2022.01</div>
+                        <div class="lan">HTML&#47; CSS&#47; JQuery</div>
+                    </div>
+                    <div class="pj-main">
+                        <div class="pj-planet">
+                            <div class="pj-link">
+                                <a href="#">
+                                    <img src="" alt="">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="pj-title">
+                            <div class="title">
+                                <span class="num">&#40;01&#41;</span>
+                                sm &#38;store
+                            </div>
+                            <div class="sub">
+                                HTML&#47; CSS&#47; JQuery
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section id="project" class="project2">
+                    <div class="pj-info">
+                        <div class="name">&#40;02&#41;&nbsp; 특허청</div>
+                        <div class="date">2022.02</div>
+                        <div class="lan">HTML&#47; CSS&#47; JQuery</div>
+                    </div>
+                    <div class="pj-main">
+                        <div class="pj-planet">
+                            <div class="pj-link">
+                                <a href="#">
+                                    <img src="" alt="">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="pj-title">
+                            <div class="title">
+                                <span class="num">&#40;02&#41;</span>
+                                특허청
+                            </div>
+                            <div class="sub">
+                                HTML&#47; CSS&#47; JQuery
+                            </div>
+                            <div class="sub">
+                                반응형 (Responsive Web)
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section id="project" class="project3">
+                    <div class="pj-info">
+                        <div class="name">&#40;03&#41;&nbsp; Cyphers</div>
+                        <div class="date">2022.03</div>
+                        <div class="lan">HTML&#47; SASS&#47; Vanilla JS</div>
+                    </div>
+                    <div class="pj-main">
+                        <div class="pj-planet">
+                            <div class="pj-link"></div>
+                        </div>
+                        <div class="pj-title">
+                            <div class="title">
+                                <span class="num">&#40;03&#41;</span>
+                                cyphers
+                            </div>
+                            <div class="sub">
+                                HTML&#47; SASS&#47; Vanilla JS
+                            </div>
+                            <div class="sub">
+                                반응형 리디자인(Responsive Web Redesign)
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section id="project" class="project4">
+                    <div class="pj-info">
+                        <div class="name">&#40;03&#41;&nbsp; Cyphers</div>
+                        <div class="date">2022.03</div>
+                        <div class="lan">HTML&#47; SASS&#47; Vanilla JS</div>
+                    </div>
+                    <div class="pj-main">
+                        <div class="pj-planet">
+                            <div class="pj-link"></div>
+                        </div>
+                        <div class="pj-title">
+                            <div class="title">
+                                <span class="num">&#40;03&#41;</span>
+                                cyphers
+                            </div>
+                            <div class="sub">
+                                HTML&#47; SASS&#47; Vanilla JS
+                            </div>
+                            <div class="sub">
+                                반응형 리디자인(Responsive Web Redesign)
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section id="project" class="project5">
+                    <div class="pj-info">
+                        <div class="name">&#40;&#10010;&#41;&nbsp; PY GAME</div>
+                        <div class="date">2022.04</div>
+                        <div class="lan">Python</div>
+                    </div>
+                    <div class="pj-main">
+                        <div class="pj-planet">
+                            <div class="pj-link"></div>
+                        </div>
+                        <div class="pj-title">
+                            <div class="title">
+                                <span class="num">&#40;&#10010;&#41;</span>
+                                py game
+                            </div>
+                            <div class="sub">
+                                Python
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </main>
+        <footer id="contact">
+
+        </footer>
+    </div>
 </body>
 </html>
