--- a/index.html
+++ b/index.html
@@ -54,146 +54,180 @@
         <div id="about">
             <div class="container">
                 <div class="title">
-                    <h2>ab<span class="italic">O</span>ut me</h2>
-                    <h2>ab<span class="italic">O</span>ut me</h2>
+                    <h2 class="tit-t">ab<span class="italic">O</span>ut me</h2>
+                    <h2 class="tit-b">ab<span class="italic">O</span>ut me</h2>
                 </div>
                 <div class="info">
                     <ul class="info-l">
-                        <li>Name<span>이지은</span></li>
-                        <li>Birth<span>1999/02/26</span></li>
-                        <li>Address<span>경기도 수원</span></li>
-                        <li>Address<span>경기도 수원</span></li>
+                        <li>
+                            <img src="./img/svg/star04.svg" alt="starIco">
+                            <span>Name</span>
+                            <span>이지은</span>
+                        </li>
+                        <li>
+                            <img src="./img/svg/star04.svg" alt="starIco">
+                            <span>Birth</span>
+                            <span>1999/02/26</span>
+                        </li>
+                        <li>
+                            <img src="./img/svg/star04.svg" alt="starIco">
+                            <span>Address</span>
+                            <span>경기도 수원</span>
+                        </li>
+                        <li>
+                            <img src="./img/svg/star04.svg" alt="starIco">
+                            <span>Education</span>
+                            <span>ERP경영정보과</span>
+                        </li>
                     </ul>
                     <ul class="info-r">
-                        <li>Skill</li>
-                        <li>HTML/ CSS/ JQuery/ JS/ Sass/ React/ Python </li>
-                        <li>Design</li>
-                        <li>Photoshop/ Figma</li>
+                        <li><img src="./img/svg/star04.svg" alt="starIco">Skill</li>
+                        <li class="right">HTML/ CSS/ JQuery/ JS/ Sass/ React/ Python </li>
+                        <li><img src="./img/svg/star04.svg" alt="starIco">Design</li>
+                        <li class="right">Photoshop/ Figma</li>
                     </ul>
                 </div>
             </div>
         </div>
         <main id="main">
-            <div class="scroll"></div>
             <div class="container">
+                <div class="scroll"></div>
                 <section id="project" class="project1">
-                    <div class="pj-info">
-                        <div class="name">&#40;01&#41;&nbsp; SM &#38;STORE</div>
-                        <div class="date">2022.01</div>
-                        <div class="lan">HTML&#47; CSS&#47; JQuery</div>
-                    </div>
-                    <div class="pj-main">
-                        <div class="pj-planet">
-                            <div class="pj-link">
-                                <a href="#">
-                                    <img src="" alt="">
-                                </a>
-                            </div>
+                    <div class="pj-wrap">
+                        <div class="pj-info">
+                            <div class="name">&#40;01&#41;&nbsp; SM &#38;STORE</div>
+                            <div class="date">2022.01</div>
+                            <div class="lan">HTML&#47; CSS&#47; JQuery</div>
                         </div>
-                        <div class="pj-title">
-                            <div class="title">
-                                <span class="num">&#40;01&#41;</span>
-                                sm &#38;store
+                        <div class="pj-main">
+                            <div class="pj-planet">
+                                <div class="pj-link">
+                                    <a href="https://namesamename.github.io/project1/" title="sm &store" target="_blank">
+                                        <img src="./img/link/smstore.png" alt="sm &store">
+                                    </a>
+                                </div>
                             </div>
-                            <div class="sub">
-                                HTML&#47; CSS&#47; JQuery
+                            <div class="pj-title">
+                                <div class="title">
+                                    <span class="num">&#40;01&#41;</span>
+                                    sm &#38;store
+                                </div>
+                                <div class="sub">
+                                    HTML&#47; CSS&#47; JQuery
+                                </div>
                             </div>
                         </div>
                     </div>
                 </section>
                 <section id="project" class="project2">
-                    <div class="pj-info">
-                        <div class="name">&#40;02&#41;&nbsp; 특허청</div>
-                        <div class="date">2022.02</div>
-                        <div class="lan">HTML&#47; CSS&#47; JQuery</div>
-                    </div>
-                    <div class="pj-main">
-                        <div class="pj-planet">
-                            <div class="pj-link">
-                                <a href="#">
-                                    <img src="" alt="">
-                                </a>
-                            </div>
+                    <div class="pj-wrap">
+                        <div class="pj-info">
+                            <div class="name">&#40;02&#41;&nbsp; 특허청</div>
+                            <div class="date">2022.02</div>
+                            <div class="lan">HTML&#47; CSS&#47; JQuery</div>
                         </div>
-                        <div class="pj-title">
-                            <div class="title">
-                                <span class="num">&#40;02&#41;</span>
-                                특허청
+                        <div class="pj-main">
+                            <div class="pj-planet">
+                                <div class="pj-link">
+                                    <a href="https://namesamename.github.io/project2/" title="특허청" target="_blank">
+                                        <img src="./img/link/kipo.png" alt="특허청">
+                                    </a>
+                                </div>
                             </div>
-                            <div class="sub">
-                                HTML&#47; CSS&#47; JQuery
-                            </div>
-                            <div class="sub">
-                                반응형 (Responsive Web)
+                            <div class="pj-title">
+                                <div class="title">
+                                    <span class="num">&#40;02&#41;</span>
+                                    특허청
+                                </div>
+                                <div class="sub">
+                                    HTML&#47; CSS&#47; JQuery
+                                </div>
+                                <div class="sub">
+                                    반응형 (Responsive Web)
+                                </div>
                             </div>
                         </div>
                     </div>
                 </section>
                 <section id="project" class="project3">
-                    <div class="pj-info">
-                        <div class="name">&#40;03&#41;&nbsp; Cyphers</div>
-                        <div class="date">2022.03</div>
-                        <div class="lan">HTML&#47; SASS&#47; Vanilla JS</div>
-                    </div>
-                    <div class="pj-main">
-                        <div class="pj-planet">
-                            <div class="pj-link"></div>
+                    <div class="pj-wrap">
+                        <div class="pj-info">
+                            <div class="name">&#40;03&#41;&nbsp; Cyphers</div>
+                            <div class="date">2022.03</div>
+                            <div class="lan">HTML&#47; SASS&#47; Vanilla JS</div>
                         </div>
-                        <div class="pj-title">
-                            <div class="title">
-                                <span class="num">&#40;03&#41;</span>
-                                cyphers
+                        <div class="pj-main">
+                            <div class="pj-planet">
+                                <div class="pj-link">
+                                    <a href="https://namesamename.github.io/project3/" title="cyphers" target="_blank">
+                                        <img src="./img/link/cyphers.png" alt="cyphers">
+                                    </a>
+                                </div>
                             </div>
-                            <div class="sub">
-                                HTML&#47; SASS&#47; Vanilla JS
-                            </div>
-                            <div class="sub">
-                                반응형 리디자인(Responsive Web Redesign)
+                            <div class="pj-title">
+                                <div class="title">
+                                    <span class="num">&#40;03&#41;</span>
+                                    cyphers
+                                </div>
+                                <div class="sub">
+                                    HTML&#47; SASS&#47; Vanilla JS
+                                </div>
+                                <div class="sub">
+                                    반응형 리디자인(Responsive Web Redesign)
+                                </div>
                             </div>
                         </div>
                     </div>
                 </section>
                 <section id="project" class="project4">
-                    <div class="pj-info">
-                        <div class="name">&#40;03&#41;&nbsp; Cyphers</div>
-                        <div class="date">2022.03</div>
-                        <div class="lan">HTML&#47; SASS&#47; Vanilla JS</div>
-                    </div>
-                    <div class="pj-main">
-                        <div class="pj-planet">
-                            <div class="pj-link"></div>
+                    <div class="pj-wrap">
+                        <div class="pj-info">
+                            <div class="name">&#40;03&#41;&nbsp; Cyphers</div>
+                            <div class="date">2022.03</div>
+                            <div class="lan">HTML&#47; SASS&#47; Vanilla JS</div>
                         </div>
-                        <div class="pj-title">
-                            <div class="title">
-                                <span class="num">&#40;03&#41;</span>
-                                cyphers
+                        <div class="pj-main">
+                            <div class="pj-planet">
+                                <div class="pj-link"></div>
                             </div>
-                            <div class="sub">
-                                HTML&#47; SASS&#47; Vanilla JS
-                            </div>
-                            <div class="sub">
-                                반응형 리디자인(Responsive Web Redesign)
+                            <div class="pj-title">
+                                <div class="title">
+                                    <span class="num">&#40;03&#41;</span>
+                                    cyphers
+                                </div>
+                                <div class="sub">
+                                    HTML&#47; SASS&#47; Vanilla JS
+                                </div>
+                                <div class="sub">
+                                    반응형 리디자인(Responsive Web Redesign)
+                                </div>
                             </div>
                         </div>
                     </div>
                 </section>
                 <section id="project" class="project5">
-                    <div class="pj-info">
-                        <div class="name">&#40;&#10010;&#41;&nbsp; PY GAME</div>
-                        <div class="date">2022.04</div>
-                        <div class="lan">Python</div>
-                    </div>
-                    <div class="pj-main">
-                        <div class="pj-planet">
-                            <div class="pj-link"></div>
+                    <div class="pj-wrap">
+                        <div class="pj-info">
+                            <div class="name">&#40;&#10010;&#41;&nbsp; PY GAME</div>
+                            <div class="date">2022.04</div>
+                            <div class="lan">Python</div>
                         </div>
-                        <div class="pj-title">
-                            <div class="title">
-                                <span class="num">&#40;&#10010;&#41;</span>
-                                py game
+                        <div class="pj-main">
+                            <div class="pj-planet">
+                                <div class="pj-link">
+                                    <a href="https://github.com/namesamename/python" title="python" target="_blank">
+                                        <img src="./img/link/python.PNG" alt="python">
+                                    </a>
+                                </div>
                             </div>
-                            <div class="sub">
-                                Python
+                            <div class="pj-title">
+                                <div class="title">
+                                    <span class="num">&#40;&#10010;&#41;</span>
+                                    py game
+                                </div>
+                                <div class="sub">
+                                    Python
+                                </div>
                             </div>
                         </div>
                     </div>
