--- a/index.html
+++ b/index.html
@@ -82,9 +82,25 @@
                     </ul>
                     <ul class="info-r">
                         <li><img src="./img/svg/star04.svg" alt="starIco">Skill</li>
-                        <li class="right">HTML/ CSS/ JQuery/ JS/ Sass/ React/ Python </li>
-                        <li><img src="./img/svg/star04.svg" alt="starIco">Design</li>
-                        <li class="right">Photoshop/ Figma</li>
+                        <li>
+                            <span>React/</span>
+                            <span>JS/</span>
+                            <span>JQuery/</span>
+                            <span>Python/</span>
+                        </li>
+                        <li>
+                            <span>HTML/</span>
+                            <span>CSS3/</span>
+                            <span>LESS/</span>
+                            <span>SCSS/</span>
+                        </li>
+                        <!-- <li><img src="./img/svg/star04.svg" alt="starIco">Design</li> -->
+                        <li>
+                            <span>Photoshop/</span>
+                            <span>Figma/</span>
+                            <span>Zeplin/</span>
+                            <span>Zeplin/</span>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -114,6 +130,9 @@
                                 </div>
                                 <div class="sub">
                                     HTML&#47; CSS&#47; JQuery
+                                </div>
+                                <div class="sub">
+                                    Zeplin(제플린) 연동
                                 </div>
                             </div>
                         </div>
@@ -182,9 +201,9 @@
                 <section id="project" class="project4">
                     <div class="pj-wrap">
                         <div class="pj-info">
-                            <div class="name">&#40;03&#41;&nbsp; Cyphers</div>
-                            <div class="date">2022.03</div>
-                            <div class="lan">HTML&#47; SASS&#47; Vanilla JS</div>
+                            <div class="name">&#40;04&#41;&nbsp; null</div>
+                            <div class="date">2022.05</div>
+                            <div class="lan">React</div>
                         </div>
                         <div class="pj-main">
                             <div class="pj-planet">
@@ -193,13 +212,10 @@
                             <div class="pj-title">
                                 <div class="title">
                                     <span class="num">&#40;03&#41;</span>
-                                    cyphers
+                                    null
                                 </div>
                                 <div class="sub">
-                                    HTML&#47; SASS&#47; Vanilla JS
-                                </div>
-                                <div class="sub">
-                                    반응형 리디자인(Responsive Web Redesign)
+                                    React
                                 </div>
                             </div>
                         </div>
