--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                             </div>
                             <div class="pj-title">
                                 <div class="title">
-                                    <span class="num">&#40;03&#41;</span>
+                                    <span class="num">&#40;04&#41;</span>
                                     null
                                 </div>
                                 <div class="sub">
@@ -251,7 +251,10 @@
             </div>
         </main>
         <footer id="contact">
-
+            <div class="container">
+                <div class="contact">contact</div>
+                <ul class="con-info"></ul>
+            </div>
         </footer>
     </div>
 </body>
