--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name='Subject' content='Portfolio'>
+	<meta name='Keywords' content='frond-end portfolio'>
+	<meta name='Publisher' content='Lee Jieun'>
+	<meta name='Copyright' content='2022 LeeJieun All rights reserved.'>
     <title>LeeJieun</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
@@ -94,7 +98,6 @@
                             <span>LESS/</span>
                             <span>SCSS/</span>
                         </li>
-                        <!-- <li><img src="./img/svg/star04.svg" alt="starIco">Design</li> -->
                         <li>
                             <span>Photoshop/</span>
                             <span>Figma/</span>
@@ -111,7 +114,7 @@
                 <section id="project" class="project1">
                     <div class="pj-wrap">
                         <div class="pj-info">
-                            <div class="name">&#40;01&#41;&nbsp; SM &#38;STORE</div>
+                            <h4 class="name">&#40;01&#41;&nbsp; SM &#38;STORE</h4>
                             <div class="date">2022.01</div>
                             <div class="lan">HTML&#47; CSS&#47; JQuery</div>
                         </div>
@@ -124,10 +127,10 @@
                                 </div>
                             </div>
                             <div class="pj-title">
-                                <div class="title">
+                                <h3 class="title">
                                     <span class="num">&#40;01&#41;</span>
                                     sm &#38;store
-                                </div>
+                                </h3>
                                 <div class="sub">
                                     HTML&#47; CSS&#47; JQuery
                                 </div>
@@ -141,7 +144,7 @@
                 <section id="project" class="project2">
                     <div class="pj-wrap">
                         <div class="pj-info">
-                            <div class="name">&#40;02&#41;&nbsp; 특허청</div>
+                            <h4 class="name">&#40;02&#41;&nbsp; 특허청</h4>
                             <div class="date">2022.02</div>
                             <div class="lan">HTML&#47; CSS&#47; JQuery</div>
                         </div>
@@ -154,10 +157,10 @@
                                 </div>
                             </div>
                             <div class="pj-title">
-                                <div class="title">
+                                <h3 class="title">
                                     <span class="num">&#40;02&#41;</span>
                                     특허청
-                                </div>
+                                </h3>
                                 <div class="sub">
                                     HTML&#47; CSS&#47; JQuery
                                 </div>
@@ -171,7 +174,7 @@
                 <section id="project" class="project3">
                     <div class="pj-wrap">
                         <div class="pj-info">
-                            <div class="name">&#40;03&#41;&nbsp; Cyphers</div>
+                            <h4 class="name">&#40;03&#41;&nbsp; Cyphers</h4>
                             <div class="date">2022.03</div>
                             <div class="lan">HTML&#47; SASS&#47; Vanilla JS</div>
                         </div>
@@ -184,10 +187,10 @@
                                 </div>
                             </div>
                             <div class="pj-title">
-                                <div class="title">
+                                <h3 class="title">
                                     <span class="num">&#40;03&#41;</span>
                                     cyphers
-                                </div>
+                                </h3>
                                 <div class="sub">
                                     HTML&#47; SASS&#47; Vanilla JS
                                 </div>
@@ -201,7 +204,7 @@
                 <section id="project" class="project4">
                     <div class="pj-wrap">
                         <div class="pj-info">
-                            <div class="name">&#40;04&#41;&nbsp; null</div>
+                            <h4 class="name">&#40;04&#41;&nbsp; null</h4>
                             <div class="date">2022.05</div>
                             <div class="lan">React</div>
                         </div>
@@ -210,10 +213,10 @@
                                 <div class="pj-link"></div>
                             </div>
                             <div class="pj-title">
-                                <div class="title">
+                                <h3 class="title">
                                     <span class="num">&#40;04&#41;</span>
                                     null
-                                </div>
+                                </h3>
                                 <div class="sub">
                                     React
                                 </div>
@@ -224,7 +227,7 @@
                 <section id="project" class="project5">
                     <div class="pj-wrap">
                         <div class="pj-info">
-                            <div class="name">&#40;&#10010;&#41;&nbsp; PY GAME</div>
+                            <h4 class="name">&#40;&#10010;&#41;&nbsp; PY GAME</h4>
                             <div class="date">2022.04</div>
                             <div class="lan">Python</div>
                         </div>
@@ -237,10 +240,10 @@
                                 </div>
                             </div>
                             <div class="pj-title">
-                                <div class="title">
+                                <h3 class="title">
                                     <span class="num">&#40;&#10010;&#41;</span>
                                     py game
-                                </div>
+                                </h3>
                                 <div class="sub">
                                     Python
                                 </div>
@@ -252,8 +255,13 @@
         </main>
         <footer id="contact">
             <div class="container">
-                <div class="contact">contact</div>
-                <ul class="con-info"></ul>
+                <h2 class="contact">contact me</h2>
+                <div class="con-infos">
+                    <ul class="con-info">
+                         <li>mary022689@naver.com</li>
+                         <li><a href="https://github.com/namesamename">github.com/namesamename</a></li>
+                    </ul>
+                </div>
             </div>
         </footer>
     </div>
