--- a/index.html
+++ b/index.html
@@ -102,7 +102,6 @@
                             <span>Photoshop/</span>
                             <span>Figma/</span>
                             <span>Zeplin/</span>
-                            <span>Zeplin/</span>
                         </li>
                     </ul>
                 </div>
@@ -132,10 +131,10 @@
                                     sm &#38;store
                                 </h3>
                                 <div class="sub">
-                                    HTML&#47; CSS&#47; JQuery
+                                    <span class="bar"></span>HTML&#47; CSS&#47; JQuery
                                 </div>
                                 <div class="sub">
-                                    Zeplin(제플린) 연동
+                                    <span class="bar"></span>Zeplin(제플린) 연동
                                 </div>
                             </div>
                         </div>
@@ -162,10 +161,10 @@
                                     특허청
                                 </h3>
                                 <div class="sub">
-                                    HTML&#47; CSS&#47; JQuery
+                                    <span class="bar"></span>HTML&#47; CSS&#47; JQuery
                                 </div>
                                 <div class="sub">
-                                    반응형 (Responsive Web)
+                                    <span class="bar"></span>반응형 (Responsive Web)
                                 </div>
                             </div>
                         </div>
@@ -192,10 +191,10 @@
                                     cyphers
                                 </h3>
                                 <div class="sub">
-                                    HTML&#47; SASS&#47; Vanilla JS
+                                    <span class="bar"></span>HTML&#47; SCSS&#47; Vanilla JS
                                 </div>
                                 <div class="sub">
-                                    반응형 리디자인(Responsive Web Redesign)
+                                    <span class="bar"></span>반응형 리디자인(Responsive Web Redesign)
                                 </div>
                             </div>
                         </div>
@@ -218,7 +217,7 @@
                                     null
                                 </h3>
                                 <div class="sub">
-                                    React
+                                    <span class="bar"></span>React
                                 </div>
                             </div>
                         </div>
@@ -245,7 +244,7 @@
                                     py game
                                 </h3>
                                 <div class="sub">
-                                    Python
+                                    <span class="bar"></span>Python
                                 </div>
                             </div>
                         </div>
@@ -257,9 +256,13 @@
             <div class="container">
                 <h2 class="contact">contact me</h2>
                 <div class="con-infos">
-                    <ul class="con-info">
-                         <li>mary022689@naver.com</li>
-                         <li><a href="https://github.com/namesamename">github.com/namesamename</a></li>
+                    <ul class="con-info info-t">
+                        <li>E-MAIL</li>
+                        <li>mary022689@naver.com</li>
+                    </ul>
+                    <ul class="con-info info-b">
+                        <li>GitHub</li>
+                        <li><a href="https://github.com/namesamename">github.com/namesamename</a></li>
                     </ul>
                 </div>
             </div>
